--- a/.github/workflows/update-rss.yml
+++ b/.github/workflows/update-rss.yml
@@ -1,1 +1,40 @@
 
+name: 自动更新 EET-China RSS
+on:
+  # 定时触发：北京时间每日0点执行（对应UTC时间16点）
+  schedule:
+    - cron: "0 16 * * *"  # 关键调整：UTC 16点 = 北京时间 0点
+  # 允许手动触发
+  workflow_dispatch:
+
+jobs:
+  update-rss:
+    runs-on: ubuntu-latest
+    steps:
+      - name: 拉取代码
+        uses: actions/checkout@v4
+
+      - name: 设置 Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.9"
+
+      - name: 安装依赖库
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: 执行 RSS 生成脚本
+        run: python rss.py
+
+      - name: 提交更新到 GitHub
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          if git diff --quiet eet_china_rss.xml; then
+            echo "RSS 内容无更新，无需提交"
+          else
+            git add eet_china_rss.xml
+            git commit -m "自动更新 RSS（$(date +'%Y-%m-%d %H:%M:%S')）"
+            git push
+          fi
