--- a/.github/workflows/update-rss.yml
+++ b/.github/workflows/update-rss.yml
@@ -1,10 +1,9 @@
-
 name: 自动更新 EET-China RSS
 on:
-  # 定时触发：北京时间每日0点执行（对应UTC时间16点）
+  # 定时触发：北京时间每日0点执行（UTC时间16点）
   schedule:
-    - cron: "0 16 * * *"  # 关键调整：UTC 16点 = 北京时间 0点
-  # 允许手动触发
+    - cron: "0 16 * * *"
+  # 手动触发（在GitHub页面点击运行）
   workflow_dispatch:
 
 jobs:
@@ -13,11 +12,18 @@ jobs:
     steps:
       - name: 拉取代码
         uses: actions/checkout@v4
+        with:
+          persist-credentials: true
 
       - name: 设置 Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.9"
+
+      - name: 安装系统依赖（用于 lxml）
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libxml2-dev libxslt1-dev
 
       - name: 安装依赖库
         run: |
