--- a/.github/workflows/update-rss.yml
+++ b/.github/workflows/update-rss.yml
@@ -1,19 +1,21 @@
 name: 自动更新 EET-China RSS
 on:
-  # 定时触发：北京时间每日0点执行（UTC时间16点）
   schedule:
-    - cron: "0 16 * * *"
-  # 手动触发（在GitHub页面点击运行）
+    - cron: "0 16 * * *"  # 北京时间0点执行
   workflow_dispatch:
 
 jobs:
   update-rss:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write  # 授予修改仓库内容的权限（关键）
     steps:
       - name: 拉取代码
         uses: actions/checkout@v4
         with:
           persist-credentials: true
+          # 使用GitHub提供的默认token，自动拥有仓库读写权限
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: 设置 Python
         uses: actions/setup-python@v5
@@ -37,10 +39,11 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
+          # 检查是否有更新
           if git diff --quiet eet_china_rss.xml; then
             echo "RSS 内容无更新，无需提交"
           else
             git add eet_china_rss.xml
             git commit -m "自动更新 RSS（$(date +'%Y-%m-%d %H:%M:%S')）"
-            git push
+            git push origin main  # 明确指定推送的分支（如main）
           fi
