--- a/.github/workflows/update-rss.yml
+++ b/.github/workflows/update-rss.yml
@@ -1,21 +1,22 @@
 name: 自动更新 EET-China RSS
+
 on:
   schedule:
-    - cron: "0 16 * * *"  # 北京时间0点执行
+    - cron: "0 16 * * *"   # 北京时间 00:00 (UTC+8)
   workflow_dispatch:
+
+permissions:
+  contents: write
 
 jobs:
   update-rss:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write  # 授予修改仓库内容的权限（关键）
     steps:
       - name: 拉取代码
         uses: actions/checkout@v4
         with:
           persist-credentials: true
-          # 使用GitHub提供的默认token，自动拥有仓库读写权限
-          token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0
 
       - name: 设置 Python
         uses: actions/setup-python@v5
@@ -30,20 +31,33 @@ jobs:
       - name: 安装依赖库
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          if [ -f requirements.txt ]; then
+            pip install -r requirements.txt
+          else
+            pip install requests beautifulsoup4 lxml
+          fi
 
       - name: 执行 RSS 生成脚本
         run: python rss.py
 
+      - name: Debug 文件与仓库状态
+        run: |
+          ls -la
+          git status --porcelain
+          test -f eet_china_rss.xml && head -n 5 eet_china_rss.xml || echo "rss file not found"
+
       - name: 提交更新到 GitHub
         run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
-          # 检查是否有更新
-          if git diff --quiet eet_china_rss.xml; then
+          set -e
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git pull --rebase
+          # 强制添加，避免被 .gitignore 屏蔽或未被跟踪
+          git add -f eet_china_rss.xml
+          # 只有在有实际改动时才提交
+          if git diff --cached --quiet; then
             echo "RSS 内容无更新，无需提交"
           else
-            git add eet_china_rss.xml
-            git commit -m "自动更新 RSS（$(date +'%Y-%m-%d %H:%M:%S')）"
-            git push origin main  # 明确指定推送的分支（如main）
+            git commit -m "自动更新 RSS（$(date -u +'%Y-%m-%dT%H:%M:%SZ')）"
+            git push
           fi
